--- a/projects/TraderCalcs/index.html
+++ b/projects/TraderCalcs/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-    <div class="container">
+    <div class="container border my-3">
         <div class="row">
             <div class="col-12 text-center my-3">
                 <p class="h1">PSE Stock Position Sizing</p>
