--- a/projects/TraderCalcs/index.html
+++ b/projects/TraderCalcs/index.html
@@ -18,7 +18,7 @@
     <div class="container border my-3">
         <div class="row">
             <div class="col-12 text-center my-3">
-                <p class="h1">PSE Stock Position Sizing</p>
+                <p class="h1">PSE Position Sizing</p>
             </div>
         </div>
         <div class="row">
